--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,6 @@ body{
 }
 .container{
   display: flex;
-  justify-content: space-around;
-  margin-top: 50px;
+  justify-content: space-between;
+  margin: 50px;
 }
